# C-elegans

./: .gitignore  README.md  README.zh-CN.md  requirements.txt
data/: README.md  calibration.example.csv  manual_counts.example.csv  manual_frame_counts.example.csv  manual_frame_counts.roi_review.csv
docs/: annotation_guide.md  imaging_protocol.md  live_camera_interface.md  pilot_roi_run_2026-06-02.md  validation_plan.md  wormswin_run_2026-06-02.md  wormswin_training_workflow.md
hardware/: README.md
notebooks/: README.md
results/: README.md
results/csv/: video_sample_summary_roi.csv  yolo_csb1_finetune_user_validation_summary.csv  yolo_gpu20_user_validation_summary.csv
scripts/: README.md  download_wormswin_dataset.py  extract_user_video_frames.py  predict_yolo_segmentation.py  prepare_wormswin_yolo.py  train_yolo_segmentation.py
software/: README.md
software/c_elegans_counter/: README.md  pyproject.toml
software/c_elegans_counter/c_elegans_counter/: __init__.py  analysis.py  cli.py  live_camera_app.py
software/daphnia_future/: README.md
